--- a/package.json
+++ b/package.json
@@ -4,34 +4,116 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "ios": "react-native run-ios --simulator \"IphoneX\"",
     "start": "react-native start",
-    "test": "jest"
+    "device": "react-native run-android --variant=release",
+    "lint": "eslint --ext .tsx --ext .ts src/",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "clean-project": "react-native-clean-project",
+    "clean-android": "cd android && ./gradlew --stop && ./gradlew clean",
+    "bundle": "cd android && ./gradlew bundleRelease",
+    "build-apk": "cd android && ./gradlew assembleRelease",
+    "install-apk": "adb install app-release.apk",
+    "pod": "cd ios && pod install && cd ..",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test:watch": "jest --watch",
+    "clear_jest": "jest --clearCache",
+    "clear-branches": "git branch | grep -v \"dev\" | xargs git branch -D && git fetch --prune"
   },
   "dependencies": {
+    "@aws-amplify/api": "^6.0.30",
+    "@aws-amplify/react-native": "^1.0.28",
+    "@gorhom/bottom-sheet": "^4",
+    "@hookform/resolvers": "^3.3.4",
+    "@notifee/react-native": "^7.8.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@sentry/react-native": "^5.22.0",
+    "aws-amplify": "^5",
+    "date-fns": "^3.6.0",
+    "lottie-react-native": "^6.7.2",
+    "nativewind": "^2.0.11",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-hook-form": "^7.51.3",
+    "react-native": "0.74.0",
+    "react-native-actions-sheet": "^0.9.3",
+    "react-native-background-fetch": "^4.2.1",
+    "react-native-background-geolocation": "^4.16.1",
+    "react-native-code-push": "^8.2.2",
+    "react-native-contacts": "^7.0.8",
+    "react-native-device-info": "^10.13.2",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-floating-label-input": "^1.4.3",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-gradle-plugin": "^0.71.19",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-international-phone-number": "^0.7.6",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-maps": "^1.14.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-open-maps": "^0.4.3",
+    "react-native-permissions": "^4.1.5",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^3.9.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-version-check": "^3.4.7",
+    "react-native-webview": "^13.8.6",
+    "rn-swipe-button": "^1.3.8",
+    "rn-tooltip": "^3.0.3",
+    "rn-tourguide": "^3.3.0",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.83",
-    "@react-native/eslint-config": "0.74.83",
-    "@react-native/metro-config": "0.74.83",
-    "@react-native/typescript-config": "0.74.83",
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.1.1",
+    "@react-native/babel-preset": "0.74.81",
+    "@react-native/eslint-config": "0.74.81",
+    "@react-native/metro-config": "0.74.81",
+    "@react-native/typescript-config": "0.74.81",
+    "@testing-library/react-native": "^12.4.5",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-root-import": "^6.6.0",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.34.1",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "jest-transform-stub": "^2.0.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "^3.2.5",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.2",
+    "typescript": "*"
   },
   "engines": {
     "node": ">=18"
-  },
-  "packageManager": "yarn@3.6.4"
+  }
 }
